implemented new prefs: color font autobr speaktime

--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -3,39 +3,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/black"
+                android:id="@+id/fullscreen"
     tools:context="com.stc.fullscreen.clock.FullscreenActivity">
 
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/date_time_layout"
-        android:layout_centerVertical="true">
+        android:layout_centerVertical="false"
+        android:layout_centerInParent="true">
 
-        <com.stc.fullscreen.clock.ScaleableTextView android:id="@+id/fullscreen_content"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="wrap_content"
-                                                   android:keepScreenOn="true"
-                                                   android:textColor="#33b5e5"
-                                                   android:textSize="144sp"
-                                                   android:textStyle="bold"
-                                                   android:text="00:00:00"
-                                                   android:maxLines="1"
-                                                   android:gravity="center"/>
+        <com.stc.fullscreen.clock.ScaleableTextView android:id="@+id/time_content"
+                                                    android:layout_width="match_parent"
+                                                    android:layout_height="wrap_content"
+                                                    android:keepScreenOn="true"
+                                                    android:textColor="#33b5e5"
+                                                    android:textSize="144sp"
+                                                    android:textStyle="bold"
+                                                    android:text="00:00:00"
+                                                    android:maxLines="1"
+                                                    android:gravity="center"/>
 
         <com.stc.fullscreen.clock.ScaleableTextView android:id="@+id/date_content"
-                                                       android:layout_width="match_parent"
-                                                       android:layout_height="wrap_content"
-                                                       android:keepScreenOn="true"
-                                                       android:textColor="#33b5e5"
-                                                       android:textSize="80sp"
-                                                       android:gravity="center"
-                                                       android:text="23 Dec"
-                                                       android:layout_marginBottom="32dp"
-                                                       android:layout_margin="16dp"
-                                                       android:layout_below="@+id/fullscreen_content"
-                                                       android:maxLines="1" />
+                                                    android:layout_width="match_parent"
+                                                    android:layout_height="wrap_content"
+                                                    android:keepScreenOn="true"
+                                                    android:textColor="#33b5e5"
+                                                    android:textSize="80sp"
+                                                    android:gravity="center"
+                                                    android:text="23 Dec"
+                                                    android:layout_marginBottom="32dp"
+                                                    android:layout_below="@+id/time_content"
+                                                    android:maxLines="1"/>
     </LinearLayout>
 
 
@@ -43,11 +43,12 @@
          android:fitsSystemWindows. -->
     <FrameLayout android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
+                 android:id="@+id/controls_layout"
+                 android:fitsSystemWindows="true">
 
         <LinearLayout android:id="@+id/fullscreen_content_controls"
             style="?metaButtonBarStyle"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
             android:background="@color/black_overlay"
