--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -1,12 +1,9 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
-         dismiss it. -->
-    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
     <ListPreference
-        android:defaultValue="FONT_DEFAULT"
+        android:defaultValue="MINECRAFTPE"
         android:entries="@array/fonts"
-        android:entryValues="@array/font_values"
+        android:entryValues="@array/fonts"
         android:key="pref_font"
         android:negativeButtonText="@null"
         android:positiveButtonText="@null"
