--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:keepScreenOn="true"
-            android:textColor="#33b5e5"
+            android:textColor="#f00"
             android:textSize="60sp"
             android:text="00:00:00"
             android:gravity="center"
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:keepScreenOn="true"
-            android:textColor="#33b5e5"
+            android:textColor="#f00"
             android:textSize="60sp"
             android:text="Tue 23 Dec"
             android:layout_gravity="center"
