--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -1,7 +1,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ListPreference
-        android:defaultValue="MINECRAFTPE"
+        android:defaultValue="Roboto-Medium"
         android:entries="@array/fonts"
         android:entryValues="@array/fonts"
         android:key="pref_font"
