--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -14,32 +14,21 @@
         android:layout_centerVertical="true"
         android:layout_centerInParent="true">
 
-        <com.stc.fullscreen.clock.utils.ScaleableTextView
+        <com.stc.fullscreen.clock.utils.ScaleableTextClock
             android:id="@+id/time_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:keepScreenOn="true"
             android:textColor="#f00"
-            android:textSize="60sp"
+            android:textSize="36sp"
             android:text="00:00:00"
             android:gravity="center"
-
+            android:format12Hour="HH:MM:ss\ndd MMMM"
+            android:format24Hour="HH:MM:ss\ndd MMMM"
             android:layout_gravity="center"
-            android:maxLines="1"/>
+            android:maxLines="2"
+            android:lines="2"/>
 
-        <com.stc.fullscreen.clock.utils.ScaleableTextView
-            android:id="@+id/date_content"
-
-            android:gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:keepScreenOn="true"
-            android:textColor="#f00"
-            android:textSize="60sp"
-            android:text="Tue 23 Dec"
-            android:layout_gravity="center"
-            android:layout_below="@+id/time_content"
-            android:maxLines="1"/>
     </LinearLayout>
 
 
