--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -7,27 +7,51 @@
     tools:context="com.stc.fullscreen.clock.ui.FullscreenActivity">
 
 
-    <LinearLayout
-        android:orientation="vertical"
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="TextView" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
         android:layout_centerVertical="true"
-        android:layout_centerInParent="true">
+        android:gravity="center_vertical|center_horizontal"
+        android:orientation="vertical">
 
         <com.stc.fullscreen.clock.utils.ScaleableTextClock
             android:id="@+id/time_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:keepScreenOn="true"
-            android:textColor="#f00"
-            android:textSize="36sp"
-            android:text="00:00:00"
-            android:gravity="center"
-            android:format12Hour="HH:MM:ss\ndd MMMM"
-            android:format24Hour="HH:MM:ss\ndd MMMM"
             android:layout_gravity="center"
+            android:fontFamily="@font/ubuntu_mono_bold"
+            android:format12Hour="HH:mm:ss"
+            android:format24Hour="HH:mm:ss"
+            android:gravity="center"
+            android:keepScreenOn="true"
+            android:lines="1"
+            android:maxLines="1"
+            android:text="00:00:00"
+            android:textColor="#f00"
+            android:textSize="36sp" />
+
+        <com.stc.fullscreen.clock.utils.ScaleableTextClock
+            android:id="@+id/date_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="@font/ubuntu_mono_bold"
+            android:format12Hour="EEE, d MMMM"
+            android:format24Hour="EEE, d MMMM"
+            android:gravity="center"
+            android:keepScreenOn="true"
+            android:lines="1"
             android:maxLines="2"
-            android:lines="2"/>
+            android:text="Mon 10 October"
+            android:textColor="#f00"
+            android:textSize="18sp" />
 
     </LinearLayout>
 
