--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -1,7 +1,8 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ListPreference
-        android:defaultValue="Roboto-Medium"
+        android:layout="@layout/support_simple_spinner_dropdown_item"
+        android:defaultValue="ubuntu_mono_one"
         android:entries="@array/fonts"
         android:entryValues="@array/fonts"
         android:key="pref_font"
